# Qiang-AgentRL-Attack-Defense

./: .gitignore  Makefile  README.md  pyproject.toml  run.ps1
CyberGym/: README.md  __init__.py  dev_log.md  guide.md  run.ps1
CyberGym/.claude/: settings.local.json
CyberGym/base_model/: __init__.py  translate.py
CyberGym/data/: capability_table.json  exploitbench_100.json
CyberGym/data/raw/: cybergym_100.json  exploitbench_raw.json
CyberGym/harness/: __init__.py  cut.py  graph.py  inject.py  render.py  search.py
CyberGym/inventory/: sample.yaml
CyberGym/schemas/: security_task_schema.yaml
CyberGym/scripts/: generate_sample_data.py  pipeline.py
agents/: __init__.py  policy_writer.py  red_agent.py  reporter.py
agents/prompts/: policy_writer.md  red_agent.md  reporter.md
core/: __init__.py  adversarial.py  attack_graph.py  attack_graph_html.py  judge.py  orchestrator.py  policy_compiler.py  probe_runner.py  rationale_auditor.py  red_probe_runner.py  runner.py  state_store.py  visualizer.py
policies/baseline/: policy_intent.yaml
probes/: registry.yaml
probes/attack_surface/: probe_cmd_injection.sh  probe_docker_sock.sh  probe_host_mount.sh  probe_proc_kallsyms.sh  probe_userns.sh
probes/red_team/: red_cmd_injection.sh  red_deserialization.sh  red_path_traversal.sh  red_sqli.sh  red_ssrf.sh  red_ssti.sh
probes/regression/: regression_health.sh  regression_home.sh  regression_legit_ping.sh
reports/runs/20260512-000154/: battle.html  game_log.json  report.md
schemas/: policy_intent.schema.json  probe_result.schema.json
(+381 files in other folders)
